changed requested changes

--- a/code/style.css
+++ b/code/style.css
@@ -137,7 +137,7 @@ footer {
 
   .image-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(2, 1fr);
     width: 80%;
     margin: 0 auto;
     padding: 10px;
@@ -157,5 +157,5 @@ footer {
 
   .image-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax (200px, 1fr));
+    grid-template-columns: repeat(4, 1fr)
   }
