--- a/code/style.css
+++ b/code/style.css
@@ -2,12 +2,10 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif
 }
 
 body {
-  margin: 0;
-  width: 100%;
+  font-family: Arial, Helvetica, sans-serif
 }
 
 .header {
@@ -51,21 +49,25 @@ nav li a:hover {
 .main-news {
   display: flex;
   width: 100%;
-  background-color: #f6f6f6;
+
 }
 
 .big-image {
-  justify-content: center;
+  min-height: 70vh;
   width: 50%;
+  justify-content: center;
+
   margin: auto;
 }
 
 .main-text {
+  min-height: 70vh;
   justify-content: center;
   width: 50%;
   text-align: left;
   margin: auto;
   padding: 20px;
+
 }
 
 h1 {
@@ -136,23 +138,6 @@ footer {
     flex-wrap: wrap;
   }
 
-
-  .main-text {
-    padding: 10px;
-  }
-
-  .big-image {
-    margin-top: 20px;
-  }
-
-  h1 {
-    font-size: 24px;
-  }
-
-  .main-text p {
-    font-size: 14px;
-  }
-
   h2 {
     font-size: 24px;
     margin: 20px auto;
@@ -166,10 +151,6 @@ footer {
   .more-news {
     min-height: 20vh;
     margin-bottom: 20px;
-  }
-
-  .box {
-    grid-template-columns: repeat(3, 30%);
   }
 
   .card {
@@ -190,7 +171,7 @@ footer {
 
 @media only screen and (max-width: 768px) {
   .box {
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
