--- a/code/style.css
+++ b/code/style.css
@@ -1,13 +1,13 @@
 
 .body {
   background-color: darkred;
+  margin: 0px, 12px, 0px, 12px;
 }
 
 
 .page-top-parent {
 
   border: 10px solid black;
-  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -16,9 +16,8 @@
 
 }
 
-@media (min-width: 320px ) and (max-width: 520px){
+@media (min-width: 320px ) and (max-width: 667px){
   .page-top-parent {
-    border: 0px;
     padding: 10px;
     display: block;
     
@@ -86,7 +85,6 @@
 }
 
 .grid-parent {
-
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   gap: 3px;
@@ -110,6 +108,12 @@
   padding: 10px;
 }
 
+@media (min-width: 320px ) and (max-width: 668px) {
+.grid-item {
+  object-fit: scale-down;
+  }
+}
+
 .h3-text {
   margin-top: 3px;
   color: black;
@@ -119,18 +123,24 @@
 
 .image-text-grid {
   color: black;
-  font-family: Publik,Helvetica,Arial,"Nimbus Sans L","Bitstream Vera Sans",sans-serif;
+  font-family: Helvetica,Arial,"Nimbus Sans L","Bitstream Vera Sans",sans-serif;
   font-weight: 400;
 }
 
 .small-box-img {
   width: 100%;
-  height: 420px;
+  height: 450px;
   object-fit: cover;
 }
 
-@media (min-width: 668px ) and (max-width: 1025px) {
+@media (min-width: 320px ) and (max-width: 668px) {
+  .small-box-img { 
+    height: 300px;
+    object-fit: scale-down;
+  }
+}
 
+@media (min-width: 668px ) and (max-width: 1025px) {
   .small-box-img {
     height: 350px;
   }
