--- a/code/style.css
+++ b/code/style.css
@@ -332,7 +332,7 @@ footer {
 
 @media only screen and (max-width: 1600px) {
   .box {
-    grid-template-columns: repeat((4, 20%));
+    grid-template-columns: repeat(4, 25%);
   }
 }
 
