--- a/code/style.css
+++ b/code/style.css
@@ -64,26 +64,31 @@ html {
     grid-area: span 2; 
   }
   
-  @media screen and (min-width: 1025px) {
-    .body {
-        flex-direction: row;
-        flex-wrap: wrap;
+  @media (min-width: 1025px) {
+    .article {
+
+        font-size: 24px;
+        height: 600px;
+        flex: 1 0 100%
     }
   }
-  @media screen and (max-width: 1024px) and (min-width: 667px) {
-    .body {
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
-  }
+  @media (max-width: 1024px) and (min-width: 667px) {
+    .article {
   
-  @media screen and (max-width: 666px) {
-    .body {
-        flex-direction:row;
-        flex-wrap: wrap;
+        font-size: 12px;
+        height: 400px;
+        flex: 1 0 50%;
     }
   }
-  
+  @media (max-width: 666px) {
+    .article {
+        font-size: 8px;
+        height: 200px;
+        flex: 1 0 25%;
+    }
+  }
+
+
    *{
     padding: 0;
     margin: 0;
@@ -177,10 +182,7 @@ html {
     background-color: #fff;
     box-shadow: 0 0 10px #222222(0, 0, 0, 0.1);
   }
-img{
-max-width: 100%;
-max-height: 100%;
-}
+
   .big-image {
     width: 500px;
     height: auto;
