--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,15 @@
 /* Reset styles */
+:root {
+  --main-background-color: #081432;
+  --transparent-background-color: #081432a7;
+  --main-text-color: #c1efeb;
+  --glow-color: #c1efebf0;
+  --box-shadow-color: #c1efeb88;
+  --text-shadow-color: #c1efeb6f;
+  --floating-gradient-color-blue: #00b3ff;
+  --floating-gradient-color-red: #f8623d;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -8,8 +19,12 @@
 /* Global styles */
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background-image: linear-gradient(180deg, #0d245d, #081432);
-  color: #c1efeb;
+  background-image: linear-gradient(
+    180deg,
+    #0d245d,
+    var(--main-background-color)
+  );
+  color: var(--main-text-color);
 }
 
 /* Layout styles */
@@ -57,15 +72,15 @@ ul.logo {
 }
 
 .logo a:hover {
-  color: #c1efeb;
+  color: var(--main-text-color);
 }
 
 .logo a:visited {
-  color: #c1efeb;
+  color: var(--main-text-color);
 }
 
 .logo a:focus {
-  color: #c1efeb;
+  color: var(--main-text-color);
 }
 
 /* Navigation styles */
@@ -88,17 +103,17 @@ ul.nav-bar {
 }
 
 .nav-bar a:hover {
-  color: #c1efeb;
-  text-shadow: 0px 0px 10px #c1efebf0;
+  color: var(--main-text-color);
+  text-shadow: 0px 0px 10px var(--glow-color);
 }
 
 .nav-bar a:visited {
-  color: #c1efeb;
+  color: var(--main-text-color);
 }
 
 .nav-bar a:focus {
-  color: #c1efeb;
-  text-shadow: 0px 0px 10px #c1efebf0;
+  color: var(--main-text-color);
+  text-shadow: 0px 0px 10px var(--glow-color);
 }
 
 /* Main content styles */
@@ -115,14 +130,14 @@ main {
   margin: 2rem;
   padding: 2rem;
   min-height: 400px;
-  border: 6px double #c1efeb;
+  border: 6px double var(--main-text-color);
   border-radius: 15px;
-  box-shadow: 10px 10px 10px #c1efeb5d;
+  box-shadow: 10px 10px 10px var(--box-shadow-color);
 }
 
 .feature-text {
-  background-color: #081432a7;
-  box-shadow: 10px 10px 10px #c1efeb88;
+  background-color: var(--transparent-background-color);
+  box-shadow: 10px 10px 10px var(--box-shadow-color);
   border-radius: 15px;
   padding: 2rem;
   max-width: 70%;
@@ -130,7 +145,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  text-shadow: 0px 0px 10px #c1efeb6f;
+  text-shadow: 0px 0px 10px var(--text-shadow-color);
 }
 
 a.feature-link {
@@ -153,7 +168,7 @@ a.feature-link {
 }
 
 .feature-text a.read-more {
-  color: #c1efeb;
+  color: var(--main-text-color);
   font-size: 0.8rem;
   text-decoration: none;
   text-align: center;
@@ -162,9 +177,9 @@ a.feature-link {
   background-color: #081432;
   width: 100px;
   height: 20px;
-  box-shadow: 0px 0px 10px #c1efeb88;
+  box-shadow: 0px 0px 10px var(--box-shadow-color);
   border-radius: 15px;
-  text-shadow: 0 0 10px #c1efeb6f;
+  text-shadow: 0 0 10px var(--text-shadow-color);
   transition: 0.2s ease-in-out;
 }
 
@@ -190,16 +205,16 @@ a.feature-link {
 
 .news-cards img {
   max-width: 100%;
-  box-shadow: 3px 3px 10px #c1efeb89;
+  box-shadow: 3px 3px 10px var(--box-shadow-color);
 }
 
 .card {
-  color: #c1efeb;
+  color: var(--main-text-color);
   overflow: hidden;
-  border: 4px double #c1efeb89;
+  border: 4px double var(--box-shadow-color);
   border-radius: 8px;
   background-color: #c1efeb0d;
-  box-shadow: 3px 3px 10px #c1efeb89;
+  box-shadow: 3px 3px 10px var(--box-shadow-color);
   text-align: left;
 }
 
@@ -207,7 +222,7 @@ a.feature-link {
   margin: 0.5rem;
   font-size: 1rem;
   text-transform: capitalize;
-  text-shadow: 0 0 10px #c1efeb6f;
+  text-shadow: 0 0 10px var(--text-shadow-color);
 }
 
 .card a {
@@ -216,7 +231,7 @@ a.feature-link {
 
 .card a:visited {
   text-decoration: none;
-  color: #c1efeb;
+  color: var(--main-text-color);
 }
 
 /* Footer styles */
@@ -227,7 +242,7 @@ footer {
   margin: 2rem 1rem;
   display: flex;
   justify-content: space-between;
-  text-shadow: 0px 0px 10px #c1efebab;
+  text-shadow: 0px 0px 10px var(--text-shadow-color);
 }
 
 footer .info {
@@ -241,7 +256,7 @@ footer img {
 
 footer a {
   font-size: 1.2rem;
-  color: #c1efeb;
+  color: var(--main-text-color);
   margin-left: 50px;
 }
 
@@ -249,7 +264,11 @@ footer a {
 .dot1 {
   position: absolute;
   z-index: -1;
-  background-image: linear-gradient(80deg, #00b3ff, #f8623d);
+  background-image: linear-gradient(
+    80deg,
+    var(--floating-gradient-color-blue),
+    var(--floating-gradient-color-red)
+  );
   border-radius: 50%;
   filter: blur(50px);
   animation: right-down 50s infinite;
@@ -258,7 +277,11 @@ footer a {
 .dot2 {
   position: absolute;
   z-index: -1;
-  background-image: linear-gradient(80deg, #00b3ff, #f8623d);
+  background-image: linear-gradient(
+    80deg,
+    var(--floating-gradient-color-blue),
+    var(--floating-gradient-color-red)
+  );
   border-radius: 50%;
   filter: blur(50px);
   animation: down-left 80s infinite;
@@ -267,8 +290,11 @@ footer a {
 .dot3 {
   position: absolute;
   z-index: -1;
-  /* background-color: red; */
-  background-image: linear-gradient(80deg, #00b3ff, #f8623d);
+  background-image: linear-gradient(
+    80deg,
+    var(--floating-gradient-color-blue),
+    var(--floating-gradient-color-red)
+  );
   border-radius: 50%;
   filter: blur(50px);
   animation: middle-right 50s infinite;
@@ -279,7 +305,11 @@ footer a {
   height: 150px;
   width: 150px;
   z-index: -1;
-  background-image: linear-gradient(80deg, #00b3ff, #f8623d);
+  background-image: linear-gradient(
+    80deg,
+    var(--floating-gradient-color-blue),
+    var(--floating-gradient-color-red)
+  );
   border-radius: 50%;
   filter: blur(40px);
   animation: down-right 50s infinite;
@@ -292,7 +322,11 @@ footer a {
   z-index: -1;
   top: 30px;
   left: 60px;
-  background-image: linear-gradient(80deg, #00b3ff, #f8623d);
+  background-image: linear-gradient(
+    80deg,
+    var(--floating-gradient-color-blue),
+    var(--floating-gradient-color-red)
+  );
   border-radius: 50%;
   filter: blur(20px);
   animation: circle 15s linear infinite;
@@ -305,7 +339,11 @@ footer a {
   z-index: -1;
   top: 1150px;
   left: 750px;
-  background-image: linear-gradient(80deg, #00b3ff, #f8623d);
+  background-image: linear-gradient(
+    80deg,
+    var(--floating-gradient-color-blue),
+    var(--floating-gradient-color-red)
+  );
   border-radius: 50%;
   filter: blur(30px);
   animation: circle 10s linear infinite;
@@ -429,7 +467,7 @@ footer a {
 }
 
 /* Media queries */
-@media only screen and (min-width: 481px) and (max-width: 781px) {
+@media only screen and (min-width: 481px) and (max-width: 1024px) {
   .logo h1 {
     font-size: 1rem;
     white-space: nowrap;
